# argparser

./: .gitignore  CMakeLists.txt  Readme.md  argparser.c  argparser.h  argparser.hpp
cmake/: ArgparserConfig.cmake.in
examples/: CMakeLists.txt  basic.c  basic.cpp  color.cpp  env.cpp  format.cpp
tests/: CMakeLists.txt  Main.test.cpp  basic_test.cpp
